# thesis

./: .pre-commit-config.yaml  main.py  pyproject.toml  sorting.json  update_final_submision.py
code/: .gitignore  README.md  pyproject.toml  sorting.json
code/tests/: quicksort.py  test_ct.py  test_login.py  test_quicksort.py  utils.py
code/tests/basic/: test_ct.py  test_quicksort.py
code/tests/generate/: test_login.py  test_sql.py
code/tests/vulnerabilities/: conftest.py
code/tests/vulnerabilities/dvwa/: compose.yaml  test_dvwa.py
code/tests/vulnerabilities/webgoat/: compose.yaml  test_webgoat.py
code/tests/vulnurabilities/dvwa/: test_dvwa.py
code/tests/vulnurabilities/webgoat/: test_webgoat.py
code/thesis/: main.py  utils.py
code/thesis/allpairs/: __init__.py  allpairs.py  pairs_storage.py
code/thesis/comer/: __init__.py  comer.py  mr.py
code/thesis/strategies/: __init__.py  comer.py  ct.py  mr.py
latex/: BS_Thesis_title_page_2024-3.docx  Makefile  README.md  thesis.bib  thesis.tex
latex/articles/: comer.txt
latex/chapters/: abstract.tex  appex.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex  chapter6.tex
latex/chapters_gpt/: chapter1.tex
latex_annotation/: README.md  thesis.bib  thesis.tex
latex_annotation/chapters/: abstract.tex  chapter1.tex  chapter2.tex  chapter3.tex  chapter4.tex  chapter5.tex
