[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["Matvey Abramov <m.abramov@innopolis.university>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-constraint = "^1.4.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.3"
ruff-lsp = "^0.0.53"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
