[tool.poetry]
name = "thesis"
version = "0.1.0"
description = ""
authors = ["Matvey Abramov <m.abramov@innopolis.university>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
python-constraint = "^1.4.0"
testflows-combinatorics = "^1.1.230921.1194623"
pytest-playwright = "^0.5.0"
mezmorize = "^0.28.2"
testcontainers = "^4.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
ruff = "^0.4.3"
ruff-lsp = "^0.0.53"
mypy = "^1.10.0"
coverage = "^7.5.1"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
extend-select = ['Q', 'RUF100', 'C90', 'UP', 'I', 'T']
mccabe = { max-complexity = 14 }

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201"]

[tool.coverage.run]
branch = true

[tool.mypy]
ignore_missing_imports = "True"

[tool.pytest.ini_options]
addopts = ["--headed"]
